--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Models\LePhiXetTuyen.cs" />
     <Compile Include="Models\MonHoc.cs" />
     <Compile Include="Models\NamHoc.cs" />
+    <Compile Include="Models\ToHopMonNganh.cs" />
     <Compile Include="Models\Nganh.cs" />
     <Compile Include="Models\PhuongThucXetTuyen.cs" />
     <Compile Include="Models\sysdiagram.cs" />
