--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Areas\Admin\Controllers\XasController.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\DangKyXetTuyensController.cs" />
+    <Compile Include="Controllers\LePhiXetTuyensController.cs" />
     <Compile Include="Controllers\ThiSinhDangKiesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -504,12 +505,17 @@
     <Content Include="Views\Auth\Register.cshtml" />
     <Content Include="Views\Auth\ResetPassword.cshtml" />
     <Content Include="Views\Auth\Index.cshtml" />
-    <Content Include="Views\ThiSinhDangKies\Create.cshtml" />
-    <Content Include="Views\ThiSinhDangKies\Delete.cshtml" />
-    <Content Include="Views\ThiSinhDangKies\Details.cshtml" />
     <Content Include="Views\ThiSinhDangKies\Edit.cshtml" />
     <Content Include="Views\ThiSinhDangKies\Index.cshtml" />
     <Content Include="Views\DangKyXetTuyens\dkxthocba.cshtml" />
+    <Content Include="Views\LePhiXetTuyens\Create.cshtml" />
+    <Content Include="Views\LePhiXetTuyens\Delete.cshtml" />
+    <Content Include="Views\LePhiXetTuyens\Details.cshtml" />
+    <Content Include="Views\LePhiXetTuyens\Edit.cshtml" />
+    <Content Include="Views\LePhiXetTuyens\Index.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
