--- a/Web.config
+++ b/Web.config
@@ -70,7 +70,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="DbConnecttion" connectionString="data source=MPC;initial catalog=HDUDBTuyenSinh;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-</configuration>
+
+<connectionStrings><add name="DbConnecttion" connectionString="data source=MPC;initial catalog=HDUDBTuyenSinh;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
