--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
@@ -183,10 +183,9 @@
     <Compile Include="Areas\Admin\Controllers\XasController.cs" />
     <Compile Include="Controllers\DangKyXetTuyens1Controller.cs" />
     <Compile Include="Controllers\DangKyXetTuyensController.cs" />
-    <Compile Include="Controllers\KhoiNganhs2Controller.cs" />
     <Compile Include="Controllers\AuthController.cs" />
-    <Compile Include="Controllers\DangKyXetTuyensController.cs" />
     <Compile Include="Controllers\LePhiXetTuyensController.cs" />
+    <Compile Include="Controllers\ThiSinhDangKies1Controller.cs" />
     <Compile Include="Controllers\ThiSinhDangKiesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -529,6 +528,12 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\ThiSinhDangKies1\Create.cshtml" />
+    <Content Include="Views\ThiSinhDangKies1\Delete.cshtml" />
+    <Content Include="Views\ThiSinhDangKies1\Details.cshtml" />
+    <Content Include="Views\ThiSinhDangKies1\Edit.cshtml" />
+    <Content Include="Views\ThiSinhDangKies1\Index.cshtml" />
+    <Content Include="Views\DangKyXetTuyens\iddkxthocba.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
