--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
@@ -172,7 +172,6 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
-    <Compile Include="Areas\Admin\Controllers\DangKyXetTuyensController.cs" />
     <Compile Include="Areas\Admin\Controllers\DoiTuongsController.cs" />
     <Compile Include="Areas\Admin\Controllers\DotXetTuyensController.cs" />
     <Compile Include="Areas\Admin\Controllers\HuyensController.cs" />
@@ -180,18 +179,13 @@
     <Compile Include="Areas\Admin\Controllers\KhuVucsController.cs" />
     <Compile Include="Areas\Admin\Controllers\NamHocsController.cs" />
     <Compile Include="Areas\Admin\Controllers\NganhsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\PhuongThucXetTuyensController.cs" />
-    <Compile Include="Areas\Admin\Controllers\ThiSinhDangKysController.cs" />
     <Compile Include="Areas\Admin\Controllers\TinhsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\ToHopMonsController.cs" />
     <Compile Include="Areas\Admin\Controllers\XasController.cs" />
     <Compile Include="Controllers\DangKyXetTuyensController.cs" />
-    <Compile Include="Controllers\ExportFileController.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\ExportFileController.cs" />
     <Compile Include="Controllers\KetQuaXetTuyensController.cs" />
     <Compile Include="Controllers\LePhiXetTuyensController.cs" />
-    <Compile Include="Controllers\NCDangKyXetTuyensController.cs" />
     <Compile Include="Controllers\ThiSinhDangKiesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -218,7 +212,6 @@
     <Compile Include="Models\TruongCapBa.cs" />
     <Compile Include="Models\Xa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ultils\DiemMon.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.5.1.3.min.css" />
@@ -465,31 +458,6 @@
     <Content Include="Areas\Admin\Views\KhuVucs\Details.cshtml" />
     <Content Include="Areas\Admin\Views\KhuVucs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\KhuVucs\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\ThiSinhDangKys\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\ThiSinhDangKys\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\ThiSinhDangKys\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\ThiSinhDangKys\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\ThiSinhDangKys\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\ToHopMons\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\ToHopMons\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\ToHopMons\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\ToHopMons\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\ToHopMons\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\PhuongThucXetTuyens\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\PhuongThucXetTuyens\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\PhuongThucXetTuyens\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\PhuongThucXetTuyens\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\PhuongThucXetTuyens\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -542,16 +510,6 @@
     <Content Include="Views\ThiSinhDangKies\Edit.cshtml" />
     <Content Include="Views\ThiSinhDangKies\Index.cshtml" />
     <Content Include="Views\DangKyXetTuyens\dkxthocba.cshtml" />
-    <Content Include="Views\KhoiNganhs2\Create.cshtml" />
-    <Content Include="Views\KhoiNganhs2\Delete.cshtml" />
-    <Content Include="Views\KhoiNganhs2\Details.cshtml" />
-    <Content Include="Views\KhoiNganhs2\Edit.cshtml" />
-    <Content Include="Views\KhoiNganhs2\Index.cshtml" />
-    <Content Include="Views\DangKyXetTuyens1\Create.cshtml" />
-    <Content Include="Views\DangKyXetTuyens1\Delete.cshtml" />
-    <Content Include="Views\DangKyXetTuyens1\Details.cshtml" />
-    <Content Include="Views\DangKyXetTuyens1\Edit.cshtml" />
-    <Content Include="Views\DangKyXetTuyens1\Index.cshtml" />
     <Content Include="Views\LePhiXetTuyens\Create.cshtml" />
     <Content Include="Views\LePhiXetTuyens\Delete.cshtml" />
     <Content Include="Views\LePhiXetTuyens\Details.cshtml" />
@@ -560,11 +518,6 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\ThiSinhDangKies1\Create.cshtml" />
-    <Content Include="Views\ThiSinhDangKies1\Delete.cshtml" />
-    <Content Include="Views\ThiSinhDangKies1\Details.cshtml" />
-    <Content Include="Views\ThiSinhDangKies1\Edit.cshtml" />
-    <Content Include="Views\ThiSinhDangKies1\Index.cshtml" />
     <Content Include="Views\DangKyXetTuyens\iddkxthocba.cshtml" />
     <Content Include="Views\KetQuaXetTuyens\Index.cshtml" />
     <Content Include="Views\NCDangKyXetTuyens\Create.cshtml" />
@@ -577,8 +530,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Uploads\UploadMinhChungs\" />
-    <Folder Include="Views\ExportFile\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\ContentOLD\bootstrap-grid.css.map" />
