--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
@@ -189,6 +189,7 @@
     <Compile Include="Areas\Admin\Controllers\ToHopMonsController.cs" />
     <Compile Include="Areas\Admin\Controllers\XasController.cs" />
     <Compile Include="Controllers\DangKyXetTuyensController.cs" />
+    <Compile Include="Controllers\DangKyXetTuyenThangController.cs" />
     <Compile Include="Controllers\ExportFileController.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\ExportFileController.cs" />
@@ -555,6 +556,7 @@
     <Content Include="Views\LePhiXetTuyens\Index.cshtml" />
     <Content Include="Views\DangKyXetTuyens\iddkxthocba.cshtml" />
     <Content Include="Views\KetQuaXetTuyens\Index.cshtml" />
+    <Content Include="Views\DangKyXetTuyenThang\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
