--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -266,6 +266,7 @@
     <Content Include="Content\css\bootstrap.rtl.css" />
     <Content Include="Content\css\bootstrap.rtl.min.css" />
     <Content Include="Content\icon\edit.svg" />
+    <Content Include="Content\images\liencaphdu.png" />
     <Content Include="Content\images\logo-hdu.png" />
     <Content Include="Content\images\profile-1.png" />
     <Content Include="Content\js\bootstrap.bundle.js" />
@@ -565,10 +566,6 @@
     <Content Include="Views\DangKyXetTuyenThang\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutLienCap.cshtml" />
     <Content Include="Views\LienCapTHCS\Create.cshtml" />
-    <Content Include="Views\LienCapTHCS\Delete.cshtml" />
-    <Content Include="Views\LienCapTHCS\Details.cshtml" />
-    <Content Include="Views\LienCapTHCS\Edit.cshtml" />
-    <Content Include="Views\LienCapTHCS\Index.cshtml" />
     <Content Include="Views\LienCapTHCS\ConfirmInfomation.cshtml" />
   </ItemGroup>
   <ItemGroup>
