--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -569,6 +569,7 @@
     <Content Include="Views\LienCapTieuHocs\Details.cshtml" />
     <Content Include="Views\LienCapTieuHocs\Edit.cshtml" />
     <Content Include="Views\LienCapTieuHocs\Index.cshtml" />
+    <Content Include="Views\LienCapTHCS\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
