--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -279,6 +279,8 @@
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\styles.css" />
+    <Content Include="Content\toastr.css" />
+    <Content Include="Content\toastr.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Areas\Admin\Views\web.config" />
@@ -506,6 +508,8 @@
     <Content Include="Areas\Admin\Views\AdminAuth\Login.cshtml" />
     <Content Include="Areas\Admin\Views\AdminAuth\Register.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\Index.cshtml" />
+    <Content Include="Content\toastr.scss" />
+    <Content Include="Content\toastr.less" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -537,6 +541,8 @@
     <Content Include="Scripts\ScriptsOLD\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\ScriptsOLD\modernizr-2.8.3.js" />
     <Content Include="Scripts\ScriptsOLD\scripts.js" />
+    <Content Include="Scripts\toastr.js" />
+    <Content Include="Scripts\toastr.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
