--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -277,6 +277,7 @@
     <Content Include="Content\images\profile-1.png" />
     <Content Include="Content\images\sptin.jpg" />
     <Content Include="Content\images\thongtintv.jpg" />
+    <Content Include="Content\images\timline.jpg" />
     <Content Include="Content\images\ttdpt.jpg" />
     <Content Include="Content\images\tttvts2023.jpg" />
     <Content Include="Content\images\tttvts2023l.jpg" />
