--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminAuthController.cs" />
     <Compile Include="Areas\Admin\Controllers\DangKyXetTuyensController.cs" />
+    <Compile Include="Areas\Admin\Controllers\DanhMucDonVisController.cs" />
     <Compile Include="Areas\Admin\Controllers\DoiTuongsController.cs" />
     <Compile Include="Areas\Admin\Controllers\DotXetTuyensController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeAdminController.cs" />
@@ -183,9 +184,11 @@
     <Compile Include="Areas\Admin\Controllers\KhuVucsController.cs" />
     <Compile Include="Areas\Admin\Controllers\LienCapTHCSController.cs" />
     <Compile Include="Areas\Admin\Controllers\LienCapTieuHocsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\NamHocDotxetsController.cs" />
     <Compile Include="Areas\Admin\Controllers\NamHocsController.cs" />
     <Compile Include="Areas\Admin\Controllers\NganhsController.cs" />
     <Compile Include="Areas\Admin\Controllers\PhuongThucXetTuyensController.cs" />
+    <Compile Include="Areas\Admin\Controllers\QLNganhToHopMonController.cs" />
     <Compile Include="Areas\Admin\Controllers\ThiSinhDangKysController.cs" />
     <Compile Include="Areas\Admin\Controllers\TinhsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ToHopMonsController.cs" />
@@ -206,6 +209,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AdminAccount.cs" />
+    <Compile Include="Models\DangKyDuThiNangKhieu.cs" />
     <Compile Include="Models\DangKyXetTuyen.cs" />
     <Compile Include="Models\DangKyXetTuyenKhac.cs" />
     <Compile Include="Models\DangKyXetTuyenKQTQG.cs" />
@@ -278,6 +282,11 @@
     <Content Include="Content\images\sptin.jpg" />
     <Content Include="Content\images\thongtintv.jpg" />
     <Content Include="Content\images\timline.jpg" />
+    <Content Include="Content\images\ts001.png" />
+    <Content Include="Content\images\ts002.png" />
+    <Content Include="Content\images\ts01.jpg" />
+    <Content Include="Content\images\ts02.jpg" />
+    <Content Include="Content\images\ts03.jpg" />
     <Content Include="Content\images\ttdpt.jpg" />
     <Content Include="Content\images\tttvts2023.jpg" />
     <Content Include="Content\images\tttvts2023l.jpg" />
@@ -423,6 +432,12 @@
     <Content Include="SbAdminPro\user-management-list.html" />
     <Content Include="SbAdminPro\user-management-org-details.html" />
     <Content Include="SbAdminPro\wizard.html" />
+    <Content Include="Scripts\bootstrap.bundle.js" />
+    <Content Include="Scripts\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\bootstrap.esm.js" />
+    <Content Include="Scripts\bootstrap.esm.min.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\bundle.min.js" />
     <Content Include="Scripts\feather.min.js" />
     <Content Include="SbAdminPro\.DS_Store" />
@@ -452,23 +467,15 @@
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Admin\Views\NamHocs\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\NamHocs\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\NamHocs\Details.cshtml" />
     <Content Include="Areas\Admin\Views\NamHocs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\NamHocs\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Tinhs\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Tinhs\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Tinhs\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Tinhs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Tinhs\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Xas\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Xas\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Xas\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Xas\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Xas\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Huyens\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Huyens\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Huyens\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Huyens\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Huyens\Index.cshtml" />
     <Content Include="Areas\Admin\Views\KhoiNganhs\Create.cshtml" />
@@ -477,18 +484,12 @@
     <Content Include="Areas\Admin\Views\KhoiNganhs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\KhoiNganhs\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Nganhs\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Nganhs\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Nganhs\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Nganhs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Nganhs\Index.cshtml" />
     <Content Include="Areas\Admin\Views\DoiTuongs\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\DoiTuongs\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\DoiTuongs\Details.cshtml" />
     <Content Include="Areas\Admin\Views\DoiTuongs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\DoiTuongs\Index.cshtml" />
     <Content Include="Areas\Admin\Views\KhuVucs\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\KhuVucs\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\KhuVucs\Details.cshtml" />
     <Content Include="Areas\Admin\Views\KhuVucs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\KhuVucs\Index.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\Create.cshtml" />
@@ -502,18 +503,12 @@
     <Content Include="Areas\Admin\Views\ThiSinhDangKys\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\ThiSinhDangKys\Index.cshtml" />
     <Content Include="Areas\Admin\Views\ToHopMons\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\ToHopMons\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\ToHopMons\Details.cshtml" />
     <Content Include="Areas\Admin\Views\ToHopMons\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\ToHopMons\Index.cshtml" />
     <Content Include="Areas\Admin\Views\PhuongThucXetTuyens\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\PhuongThucXetTuyens\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\PhuongThucXetTuyens\Details.cshtml" />
     <Content Include="Areas\Admin\Views\PhuongThucXetTuyens\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\PhuongThucXetTuyens\Index.cshtml" />
     <Content Include="Areas\Admin\Views\DotXetTuyens\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\DotXetTuyens\Details.cshtml" />
     <Content Include="Areas\Admin\Views\DotXetTuyens\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\DotXetTuyens\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AdminAuth\Login.cshtml" />
@@ -531,6 +526,12 @@
     <Content Include="Areas\Admin\Views\LienCapTieuHocs\Details.cshtml" />
     <Content Include="Areas\Admin\Views\LienCapTieuHocs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\LienCapTieuHocs\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\NamHocDotxets\Index.cshtml" />
+    <Content Include="Scripts\bootstrap.bundle.js.map" />
+    <Content Include="Scripts\bootstrap.bundle.min.js.map" />
+    <Content Include="Scripts\bootstrap.esm.js.map" />
+    <Content Include="Scripts\bootstrap.esm.min.js.map" />
+    <Content Include="Scripts\bootstrap.js.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
